[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Linear combination of independent noncentral chi-squared random variables
download_url = https://github.com/limix/chi2comb-py
keywords = chi-squared, probability, distribution
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = chi2comb
url = https://github.com/limix/chi2comb-py
version = attr: version.get

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    cffi>=1.11.5
    pytest-runner>=4.2
install_requires =
    cffi>=1.11.5
    pytest>=3.6.3
tests_require =
    pytest>=3.6.3

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
    --ignore="version.py"
    --ignore="libpath.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject .pytest_cache __pycache__
codestyle_ignore = E203

[flake8]
ignore = E501 E741 E203